--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
-    "lucide-vue-next": "^0.553.0",
-    "vue": "^3.5.22",
-    "zod": "^4.1.12"
+    "lucide-vue-next": "0.553.0",
+    "vue": "3.5.22",
+    "zod": "4.1.12"
   },
   "devDependencies": {
-    "@types/node": "^24.10.0",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "gh-pages": "^6.3.0",
-    "typescript": "^5.9.3",
-    "vite": "^5.4.10",
-    "vue-tsc": "^3.1.3"
+    "@types/node": "24.10.0",
+    "@vitejs/plugin-vue": "5.1.4",
+    "gh-pages": "6.3.0",
+    "typescript": "5.9.3",
+    "vite": "5.4.10",
+    "vue-tsc": "3.1.3"
   }
 }
